Mejora un poco la documentación
